# ml-chess

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md  dev  pyproject.toml
chungus/: cli.py  data.py  dataset.py  model.py  positions.py  util.py
src/: data.rs  gamedb.rs  games.rs  lib.rs
src/gamedb/: game.rs  pgn.rs  serialization.rs
src/gamedb/testfiles/: single.pgn
src/games/: game.rs  pgn.rs  serialization.rs
src/games/testfiles/: test.pgn
