[package]
name = "chessers"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "chessers"
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
eyre = "0.6.12"
numpy = "0.21.0"
pgn-reader = "0.26.0"
pyo3 = "0.21.1"
rayon = "1.10.0"
serde = { version = "1.0.203", features = ["derive"] }
shakmaty = "0.27.0"
zstd = "0.13.1"
